[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosynth_compose"
version = "0.10.0"
description = "neurosynth compose"
authors = [
    { name="James Kent", email="jamesdkent21@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "auth0-python~=3.16",
    "authlib~=0.15",
    "celery~=5.0",
    "connexion[swagger-ui]~=2.13",
    "flask~=2.0",
    "Flask-CeleryExt~=0.5",
    "flask-cors~=3.0",
    "flask-migrate~=2.5",
    "flask-security~=5.6",
    "flask-shell-ipython~=0.4",
    "flask-sqlalchemy~=3.0",
    "gunicorn~=23.0",
    "ipython~=7.19",
    "marshmallow~=3.0",
    "pandas~=2.0",
    "psycopg2-binary~=2.8",
    "pyld~=2.0",
    "python-jose~=3.3",
    "Redis~=4.4",
    "scipy~=1.9",
    "shortuuid~=1.0",
    "sqlalchemy~=1.4",
    "sqlalchemy-utils~=0.36",
    "webargs~=8.7",
    "wrapt~=1.12",
    "NiMARE==0.2.2",
    "pynv @ git+https://github.com/NeuroVault/pynv.git#egg=pynv",
    "neurostore-sdk @ git+https://github.com/neurostuff/neurostore-python-sdk.git#egg=neurostore-sdk"
]

[project.optional-dependencies]
dev = [
    "flake8~=3.8",
    "pip-chill~=1.0",
    "wheel~=0.36",
    "schemathesis~=3.14",
    "pytest~=8.4"
]

[tool.setuptools.packages.find]
include = ["neurosynth_compose*"]
