[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosynth_compose"
version = "0.10.0"
description = "neurosynth compose"
authors = [
    { name="James Kent", email="jamesdkent21@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "auth0-python~=4.13",
    "authlib~=1.6",
    "celery~=5.0",
    "connexion[swagger-ui,uvicorn,flask]==3.3.0",
    "flask~=3.1",
    "Flask-CeleryExt~=0.5",
    "flask-cors~=6.0",
    "flask-migrate~=4.1",
    "Flask-Security-Too~=5.5",
    "flask-shell-ipython~=0.4",
    "flask-sqlalchemy~=3.1",
    "gunicorn~=23.0",
    "ipython~=9.6",
    "marshmallow~=4.0",
    "pandas~=2.0",
    "psycopg2-binary~=2.8",
    "pyld~=2.0",
    "python-jose~=3.3",
    "redis~=7.0",
    "scipy~=1.9",
    "shortuuid~=1.0",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.36",
    "webargs~=8.7",
    "wrapt~=2.0",
    "NiMARE==0.6.1",
    "pynv @ git+https://github.com/NeuroVault/pynv.git#egg=pynv",
    "neurostore-sdk @ git+https://github.com/neurostuff/neurostore-python-sdk.git#egg=neurostore-sdk"
]

[project.optional-dependencies]
dev = [
    "flake8~=7.3",
    "pip-chill~=1.0",
    "wheel~=0.36",
    "pytest~=8.4"
]

[tool.setuptools.packages.find]
include = ["neurosynth_compose*"]
