[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosynth_compose"
version = "0.19.1"
description = "neurosynth compose"
authors = [
    { name="James Kent", email="jamesdkent21@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "auth0-python>=5.3,<7.0",
    "authlib~=1.6",
    "alembic~=1.18",
    "celery~=5.0",
    "connexion[swagger-ui,uvicorn]==3.3.0",
    "gunicorn>=25,<27",
    "ipython~=9.6",
    "itsdangerous~=2.2",
    "marshmallow~=4.0",
    "orjson~=3.10",
    "pandas~=3.0",
    "psycopg2-binary~=2.8",
    "pyld>=2,<4",
    "python-jose~=3.3",
    "redis>=7,<9",
    "scipy~=1.9",
    "shortuuid~=1.0",
    "sqladmin~=0.23",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.36",
    "starlette>=1.0.0,<2",
    "webargs~=8.7",
    "wrapt~=2.1",
    "NiMARE==0.20.0",
    "pynv @ git+https://github.com/NeuroVault/pynv.git#egg=pynv",
    "neurostore-sdk @ git+https://github.com/neurostuff/neurostore-python-sdk.git#egg=neurostore-sdk"
]

[project.optional-dependencies]
dev = [
    "flake8~=7.3",
    "pip-chill~=1.0",
    "wheel~=0.36",
    "pytest~=9.0"
]

[project.scripts]
compose = "compose_cli:main"

[tool.setuptools]
py-modules = ["compose_cli"]

[tool.setuptools.packages.find]
include = ["neurosynth_compose*"]

[tool.setuptools.package-data]
neurosynth_compose = ["openapi/**/*"]
