[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurostore"
version = "0.10.0"
description = "neurostore"
authors = [
    { name = "James Kent", email = "jamesdkent21@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "auth0-python~=3.16",
    "authlib~=1.6",
    "connexion[swagger-ui,uvicorn,flask]==3.0.0",
    "flask~=3.1",
    "flask-caching~=2.0",
    "flask-shell-ipython~=0.4",
    "flask-migrate~=4.1",
    "flask-sqlalchemy~=3.1", # fix multiple instance error: https://flask-sqlalchemy.palletsprojects.com/en/3.0.x/changes/#version-3-0-3
    "gunicorn~=23.0",
    "ipython~=8.18",
    "marshmallow~=3.0",
    "numpy<2.0.0",
    "pandas~=2.3",
    "psycopg2-binary~=2.8",
    "pyld~=2.0",
    "python-jose~=3.3",
    "redis",
    "shortuuid~=1.0",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils",
    "sqltap",
    "webargs~=8.7",
    "wrapt~=1.12",
    "openapi-spec-validator~=0.3",
    "scipy~=1.9",
    "orjson~=3.8",
    "flask_orjson~=2.0.0"
]

[tool.setuptools.packages.find]
exclude = ["tests", "test_*"]
include = ["neurostore*"]

[project.optional-dependencies]
dev = [
    "flake8~=7.3",
    "pip-chill~=1.0",
    "wheel~=0.36",
    "pytest~=8.4",
    "vcrpy~=7.0",
    "pytest-recording~=0.13.1",
]
